# docs/swagger.yaml
@@ -2157,8 +2157,6 @@ definitions:
     type: object
   schema.SiteGeneralReq:
     properties:
-      check_update:
-        type: boolean
       contact_email:
         maxLength: 512
         type: string
@@ -2181,8 +2179,6 @@ definitions:
     type: object
   schema.SiteGeneralResp:
     properties:
-      check_update:
-        type: boolean
       contact_email:
         maxLength: 512
         type: string
@@ -2214,7 +2210,9 @@ definitions:
       interface:
         $ref: '#/definitions/schema.SiteInterfaceSettingsResp'
       login:
-        $ref: '#/definitions/schema.SiteLoginResp'
+        allOf:
+        - $ref: '#/definitions/schema.SiteLoginResp'
+        description: todo
       revision:
         type: string
       site_advanced:
@@ -2268,42 +2266,6 @@ definitions:
     - language
     - time_zone
     type: object
-  schema.SiteLegalReq:
-    properties:
-      external_content_display:
-        enum:
-        - always_display
-        - ask_before_display
-        type: string
-      privacy_policy_original_text:
-        type: string
-      privacy_policy_parsed_text:
-        type: string
-      terms_of_service_original_text:
-        type: string
-      terms_of_service_parsed_text:
-        type: string
-    required:
-    - external_content_display
-    type: object
-  schema.SiteLegalResp:
-    properties:
-      external_content_display:
-        enum:
-        - always_display
-        - ask_before_display
-        type: string
-      privacy_policy_original_text:
-        type: string
-      privacy_policy_parsed_text:
-        type: string
-      terms_of_service_original_text:
-        type: string
-      terms_of_service_parsed_text:
-        type: string
-    required:
-    - external_content_display
-    type: object
   schema.SiteLegalSimpleResp:
     properties:
       external_content_display:
@@ -2326,8 +2288,6 @@ definitions:
         type: boolean
       allow_password_login:
         type: boolean
-      login_required:
-        type: boolean
     type: object
   schema.SiteLoginResp:
     properties:
@@ -2341,8 +2301,28 @@ definitions:
         type: boolean
       allow_password_login:
         type: boolean
-      login_required:
-        type: boolean
+    type: object
+  schema.SitePoliciesReq:
+    properties:
+      privacy_policy_original_text:
+        type: string
+      privacy_policy_parsed_text:
+        type: string
+      terms_of_service_original_text:
+        type: string
+      terms_of_service_parsed_text:
+        type: string
+    type: object
+  schema.SitePoliciesResp:
+    properties:
+      privacy_policy_original_text:
+        type: string
+      privacy_policy_parsed_text:
+        type: string
+      terms_of_service_original_text:
+        type: string
+      terms_of_service_parsed_text:
+        type: string
     type: object
   schema.SiteQuestionsReq:
     properties:
@@ -2361,6 +2341,34 @@ definitions:
         type: integer
       restrict_answer:
         type: boolean
+    type: object
+  schema.SiteSecurityReq:
+    properties:
+      check_update:
+        type: boolean
+      external_content_display:
+        enum:
+        - always_display
+        - ask_before_display
+        type: string
+      login_required:
+        type: boolean
+    required:
+    - external_content_display
+    type: object
+  schema.SiteSecurityResp:
+    properties:
+      check_update:
+        type: boolean
+      external_content_display:
+        enum:
+        - always_display
+        - ask_before_display
+        type: string
+      login_required:
+        type: boolean
+    required:
+    - external_content_display
     type: object
   schema.SiteSeoReq:
     properties:
@@ -3924,47 +3932,6 @@ paths:
       summary: update site info interface
       tags:
       - admin
-  /answer/admin/api/siteinfo/legal:
-    get:
-      description: Set the legal information for the site
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/handler.RespBody'
-            - properties:
-                data:
-                  $ref: '#/definitions/schema.SiteLegalResp'
-              type: object
-      security:
-      - ApiKeyAuth: []
-      summary: Set the legal information for the site
-      tags:
-      - admin
-    put:
-      description: update site legal info
-      parameters:
-      - description: write info
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/schema.SiteLegalReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/handler.RespBody'
-      security:
-      - ApiKeyAuth: []
-      summary: update site legal info
-      tags:
-      - admin
   /answer/admin/api/siteinfo/login:
     get:
       description: get site info login config
@@ -4006,6 +3973,47 @@ paths:
       summary: update site login
       tags:
       - admin
+  /answer/admin/api/siteinfo/polices:
+    get:
+      description: Get the policies information for the site
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.RespBody'
+            - properties:
+                data:
+                  $ref: '#/definitions/schema.SitePoliciesResp'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Get the policies information for the site
+      tags:
+      - admin
+    put:
+      description: update site policies configuration
+      parameters:
+      - description: write info
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/schema.SitePoliciesReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.RespBody'
+      security:
+      - ApiKeyAuth: []
+      summary: update site policies configuration
+      tags:
+      - admin
   /answer/admin/api/siteinfo/question:
     get:
       description: get site questions setting
@@ -4045,6 +4053,47 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: update site question settings
+      tags:
+      - admin
+  /answer/admin/api/siteinfo/security:
+    get:
+      description: Get the security information for the site
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.RespBody'
+            - properties:
+                data:
+                  $ref: '#/definitions/schema.SiteSecurityResp'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Get the security information for the site
+      tags:
+      - admin
+    put:
+      description: update site security configuration
+      parameters:
+      - description: write info
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/schema.SiteSecurityReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.RespBody'
+      security:
+      - ApiKeyAuth: []
+      summary: update site security configuration
       tags:
       - admin
   /answer/admin/api/siteinfo/seo:
